debug - run tests with mvn test command